
TODO:
	show MIDI length in seconds.
	TextTrackWriter
	FingeringNavigator
		save longest node as candidate
		insert leaves as sorted list, bubble once at front segment once to get best node



2017.9.19	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: avoid fingering constraints overwrited after saving.


2017.9.18	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: save source in storage.
	+	FingeringNavigatorViewer: file drag & drop added.

	+	Pianist/FingeringNavigator: constraits navigation implemented.

	+	NotationUtils: added fingering parsing in parseMidiTrack.

	>	Pianist/FingeringNavigator: added MinStepCount.

	>	Pianist/FingeringNavigator: refined progress bar.

	>	FingeringNavigatorViewer: refined focus scroll.


2017.9.17	K.L.	<k.l.lambda@gmail.com>

	>	Pianist/FingeringNavigator: EstimatedCosts update added.

	>	FingeringNavigatorViewer: refined styles.

	>	Pianist/FingeringNavigator: optimized current node searching.

	+	FingeringNavigatorViewer: added keyboard shortcuts.


2017.9.16	K.L.	<k.l.lambda@gmail.com>

	+	FingeringNavigatorViewer: step controller implemented.

	+	FingeringNavigatorViewer: created.

	+	Pianist/FingeringNavigator: added step index for tree node.


2017.9.15	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: added adaption speed.

	+	Pianist/FingeringNavigator: refined structure.

	+	FingeringGenerator: added tree dump.

	+	Pianist/FingeringNavigator: evaluateChordStaticCost implemented.


2017.9.14	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Fingering: HandConfig.getFingerChordWristRange implemented.


2017.9.13	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added progress bar.

	+	Pianist/FingeringNavigator: output result implemented.

	+	Pianist/FingeringNavigator: getFingerChoices implemented.


2017.9.12	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Piano: KeyPositions added.


2017.9.12	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Piano.cs: created.


2017.9.7	K.L.	<k.l.lambda@gmail.com>
